--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "idyll index.idl --css styles.css --layout blog --spellcheck",
-    "build": "idyll index.idl --layout blog --css styles.css --build | uglifyjs > build/index.js; cp -r {.idyll/styles.css,images,fonts} build/;",
+    "build": "idyll index.idl --layout blog --css styles.css --build | uglifyjs > build/index.js; cp .idyll/styles.css build/",
     "deploy": "npm run build && gh-pages -d ./build"
-  },
-  "dependencies": {
-    "idyll": "^1.0.0"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
@@ -15,6 +12,10 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "uglify-js": "^2.7.5"
+    "uglify-js": "^2.8.22",
+    "uglifyjs": "^2.4.10"
+  },
+  "dependencies": {
+    "idyll": "^1.0.25"
   }
 }
