--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
+    "github-cornerify": "^1.0.7",
     "idyll-component": "^1.0.5",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
